[#11] Fix for filter facet box total datasets misalignment in IE7

--- a/ckanext/ecportal/public/css/ecportal.css
+++ b/ckanext/ecportal/public/css/ecportal.css
@@ -1347,6 +1347,14 @@ h3 { margin-bottom: 10px; }
   margin: 0 0 0 5px;
   vertical-align: 1px;
 }
+.ie7 .filter-box h4 {
+  float: none;
+  display: inline;
+}
+.ie7 .filter-box .filter-total .rss {
+  float: none;
+  display: inline-block;
+}
 /* Removes margin bottom from search inputs */
 input.search {
   margin-bottom: 0;
